# test_openai_sdk

./: .gitattributes  .gitignore  ModelSettings.md  Reasoning.md  activate_mlflow_ui.sh  activate_poetry_env.sh  agents_def.md  pyproject.toml
mlflow_logs/: mlflow.db
mlflow_logs/605548861687891231/: meta.yaml
mlflow_logs/605548861687891231/traces/tr-085b50a795c0b5d86145c555b8df57f1/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-094f95fe1afdf53eec1c9c8c8b9c3843/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-14dc78ca48804a65fd1d06a90c63bb57/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-1a323a4ce91d2b3e96e16adb72dafef8/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-2c913d25819a92167e14ad231c951f42/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-31f0282a6b83ee297a7a42cd3e25890e/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-3de0bea5b85b83f7fdbd2f465f0e7f23/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-4f3ae7af557dc184546d65218f2d4c09/: trace_info.yaml
mlflow_logs/605548861687891231/traces/tr-4fb96e9542c9dccf4e450959d27878a1/: trace_info.yaml
notebooks/: agents v3.ipynb  ollama openai compatibility check.ipynb  ollama openai with mlflow test.ipynb  ollama with agents test-v2.ipynb  ollama with agents test.ipynb
scripts/: del.py  deterministic.py  force_tool_use.py  orchastrating_agents.py  orchastrating_agents_v2.py  orchastrating_agents_v3.py  orchastrating_agents_v4.py  routing.py  utils.py
(+176 files in other folders)
