[project]
name = "test-openai-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Kushwaha"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "openai (>=2.8.1,<3.0.0)",
    "notebook (>=7.5.0,<8.0.0)"
]

[tool.poetry]
package-mode = false